FTP and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.4b3
- [Feature] Quick Connect field accepts URLs as input
- [Bugfix] Deleting more than 10 files at once
- [Bugfix] Typing in transfer window causes crash
- [Bugfix] Transcript causes crash
- [Bugfix] Reporting correct file size for large files
- [Bugfix] Disable resume on ASCII tranfers (FTP)
- [Bugfix] Incompatiblity with Filezilla Server (FTP)
- [Bugfix] Synchronizing current working directory
- [Bugfix] Graceful failure on SSH connection problems

2.4b2
- [Feature] Allow the selection of files in the browser by typing more than just the first character of the filename
- [Feature] A bookmark in the drawer can be selected by typing its hostname
- [Feature] Preserve the modification date on upload (SFTP)
- [Feature] Preserve the modification date on upload if the server supports 'CHMOD UTIME' (FTP)
- [Bugfix] Determine changed files based on modification date when synchronizing
- [Bugfix] Opening an URL linking to a file opens a browser window
- [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
- [Bugfix] Logging the response of 'LIST' (FTP)
- [Bugfix] Selection of bookmark in connection dialog
- [Bugfix] Performance issue in log view (thanks to Douglas Davidson)
- [Feature] Live scrolling log view

2.4b1
- [Feature] Synchronization of files
- [Feature] Create new files on server
- [Feature] Support for Novell Netware file listings (FTP)
- [Feature] Growl notification support (see http://growl.info)
- [Feature] Limit number of concurrent connections to a remote host 
- [Feature] Move remote files with copy & paste
- [Feature] Select a file in the browser by typing its first character
- [Feature] Put remote files into the transfer queue with copy & paste