@@ -10,6 +10,7 @@
         <string>Changelog:
 2.4b3
 - [Feature] Quick Connect field accepts URLs as input
+- [Feature] Reordering bookmarks using drag and drop
 - [Bugfix] Deleting more than 10 files at once
 - [Bugfix] Typing in transfer window causes crash
 - [Bugfix] Transcript causes crash
